<resources>
    <string name="app_name">HajjLottery</string>
    <string name="corporation_name">The Supreme Council for Hajj and Umrah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Supreme Council for Hajj and Umrah</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="more_app">More App</string>
    <string name="about_developer">About Developer</string>
    <string name="about_council">About Council</string>
    <string name="national_number">National Number</string>
    <string name="search">Search</string>
    <string name="about_council_desc">The experience of Hajj and Umrah works in Sudan has been achieving steady and continuous development during the past two decades, and it can be said that it has made a quantum and great leap thanks to the state’s interest in glorifying rituals, taking care of its work, and laying out clear foundations and controls for managing Hajj and Umrah affairs. </string>
    <string name="confirm_exit">Press again to exit </string>
</resources>