<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hajjlottery.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_council"
        android:name="com.example.hajjlottery.ui.about_council.AboutCouncilActivity"
        android:label="@string/about_council"
        tools:layout="@layout/activity_about_council"/>

    <activity
        android:id="@+id/nav_developer"
        android:name="com.example.hajjlottery.ui.about_developer.AboutDeveloperActivity"
        android:label="@string/about_developer"
        tools:layout="@layout/activity_about_developer" />
</navigation>